# grok

./: .gitignore  AGENTS.md  Dockerfile  LICENSE.md  README.md  config.example.yaml  mise.toml  pyproject.toml  user-style.ipynb
bot/: __main__.py  ai.py  api.py  bot.py  cli.py  models.py  tools.py
k8s/: base.yaml  kustomization.yaml  optimized2.json
