[project]
name = "grok"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "dspy>=3.0.4",
    "pydantic>=2.12.4",
    "pyyaml>=6.0.3",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pyright>=1.1.407",
]

[tool.ruff]
line-length = 120
