[project]
name = "grok"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "dspy>=3.1.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pyright>=1.1.407",
]

[tool.ruff]
line-length = 120
