[project]
name = "grok"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "httpx>=0.28.0",
    "pydantic-ai>=1.44.0",
    "pyyaml>=6.0.3",
    "websockets>=13.0.0,<15.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pyright>=1.1.407",
]

[tool.ruff]
line-length = 120
